generification
git-svn-id: https://svn.apache.org/repos/asf/commons/sandbox/functor/trunk@665786 13f79535-47bb-0310-9956-ffa450edef68